packages/taquito-michel-codec/test/contracts_013/ill_typed/view_toplevel_bad_name_non_printable_char.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "\\x00" nat nat { UNPAIR ; ADD } ;
